envcrypt-test/tests/fixtures/missing_var.rs
use envcrypt::envcrypt;

fn main() {
    envcrypt!("MISSING")
}
